# bazelcov

./: README.md  WORKSPACE.bazel  cargo-bazel-lock.json
p1/: BUILD.bazel
p1/src/: main.rs
